# piphi-network-official-i2c-library

./: README.md  dockerfile  pyproject.toml  requirements.txt
src/: manifest.json
src/piphi_network_official_i2c_library/: app.py
src/piphi_network_official_i2c_library/contract/: config.py  discovery.py  health.py  schema.py  ui_schema.py
src/piphi_network_official_i2c_library/lib/: common.py  lifespan.py
